# qt_interface

./: informações.md
live-de-python-main/codigo/Live164/: pyproject.toml
live-de-python-main/codigo/Live173/live_bin/live_pybins/: pyproject.toml
live-de-python-main/codigo/Live173/live_bin/live_pybins/parte_3_pyoxidizer/my_app/: pyoxidizer.bzl
live-de-python-main/codigo/Live173/pyapp/: pyoxidizer.bzl
live-de-python-main/codigo/Live195/: requirements.txt
live-de-python-main/codigo/Live197/: dados.csv
pyside/: app_base.py  app_window.py  qt.md
